Fix minor spacing issues

--- a/src/panel.styl
+++ b/src/panel.styl
@@ -26,7 +26,7 @@
 }
 
 @media screen and (min-width: 568px) {
-  button {
+  .panel {
     margin-bottom: 0.5em;
   }
 }
